exports[`test should render a TextArea with the rest of the props 1`] = `
<textarea
  aria-required="true"
  className="terra-Form-textarea"
  cols={null}
  name="description"
  onChange={[Function]}
  required={true}
  rows={null}
  value="I\'m a software engineer working at Cerner" />
`;

exports[`test should render a default TextArea component 1`] = `
<textarea
  aria-required={false}
  className="terra-Form-textarea"
  cols={null}
  name={null}
  onChange={[Function]}
  required={false}
  rows={null} />
`;
